--- a/static/signup.css
+++ b/static/signup.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url("./assets/userimg.jpg");
+    /* background-image: url("./assets/userimg.jpg"); */
+    background-image: url("./assets/new.jpg");
     margin: 0;
     padding: 0;
 }
