--- a/static/myCart.css
+++ b/static/myCart.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    /* background-color: #f4f4f4; */
+    background-image: url("./assets/new.jpg");
     color: #333;
     margin: 0;
     padding: 0;
@@ -19,10 +20,10 @@ ul {
 }
 
 li {
-    background-color: #fff;
+    /* background-color: #fff; */
     margin: 10px;
     padding: 20px;
-   
+   color: #fff;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     align-items: center;
