--- a/static/profile.css
+++ b/static/profile.css
@@ -2,13 +2,15 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url("./assets/profimg.jpg");
+    /* background-image: url("./assets/profimg.jpg"); */
+    background-image: url("./assets/new.jpg");
     background-size: cover;
 }
 
     h1 {
-    background-color: lightblue;
-    color: black;
+    /* background-color: lightblue; */
+    /* color: black; */
+    color: #80701d;
     padding: 20px;
     margin: 0;
     text-align: center;
