--- a/static/style.css
+++ b/static/style.css
@@ -4,14 +4,16 @@
     box-sizing: border-box;
 }
 
-html {
-    background-image: url("./assets/new.jpg");
-    z-index: -1;
-}
+/* html {
+    background-image: url("./assets/new.jpg") !important;
+    z-index: 1000 !important;
+} */
 
 body {
-    color: #ccc;
-}
+    /* color: aquamarine; */
+    /* background-color: aquamarine !important; */
+    background-image: url("./assets/new.jpg") !important;
+} 
 
 .main h1 {
     text-align: center;
@@ -33,12 +35,14 @@ body {
     gap: .8rem;
 }
 
-.main h2 {
+.main h1 {
     text-align: center;
+    color: aquamarine;
 }
 
 ul li {
     list-style: none;
+    color: aquamarine;
 }
 
 .menu {
@@ -47,8 +51,8 @@ ul li {
 
 .sign {
     padding: 5px 8px;
-    border: 2px solid blue;
-    background-color: black;
+    border: 2px solid rgb(142, 203, 183);
+    /* background-color: black; */
     text-decoration: none;
     color: white;
     border-radius: 5px;
@@ -56,7 +60,7 @@ ul li {
 }
 
 .sign:hover {
-    background-color: rgb(18, 76, 223);
+    background-color: rgb(82, 167, 139);
     border: 2px solid black;
 }
 
@@ -69,7 +73,7 @@ ul li {
     width: 100%;
     padding: 7px;
     color: #fff;
-    background-color: black;
+    background-color: rgb(73, 134, 113);
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
@@ -96,7 +100,7 @@ ul li {
     border: 1px solid black;
     border-radius: 50%;
     /* color: #fff; */
-    background-color: rgb(215, 61, 61);
+    background-color: aquamarine;
     /* background-color: auto; */
     /* background-color: rgb(18, 40, 211); */
 }
@@ -114,18 +118,18 @@ p {
     margin: 5px 0;
 }
 
-.book {
-    width: 30%; /* Set the width of each book */
-    margin-bottom: 20px; /* Add some space between books */
-    /* border: 1px solid #ccc; Add a border for visual separation */
-    padding: 10px; /* Add some padding for better styling */
-    box-sizing: border-box; /* Ensure padding is included in the width */
-    /* box-shadow: 4px 4px 8px rgba(255, 228, 196, 0.801); */
+a {
+    text-decoration: none !important;
+    color: aquamarine !important;
+}
+
+.card {
+    background-color: rgb(186, 199, 195) !important;
     box-shadow: 4px 4px 8px rgb(57, 57, 122);
     transition: transform 0.5s ease;
 } 
 
-.book:hover {
+.card:hover {
     transform: translateY(-5px);
     /* background-color: aqua; */
 }
@@ -134,31 +138,7 @@ a {
     color: black;
 }
 
-.books {
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-    line-height: 1.4rem;
-}
-
-.book-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    max-width: 900px; /* Adjust this value to your preference */
-}
-
-
 img {
     max-width: 100%;
     height: auto;
-}
-
-.button-container {
-    display: flex;
-    /* justify-content: center; */
-}
-
-.button-container button:hover {
-    background-color: rgb(19, 19, 173);
 }
