--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,68 +1,99 @@
 <html>
-    <head>
-        <title>Book Management Store</title>
-        <link rel="stylesheet" href="../static/style.css">
-    </head>
-    <body>
-        <div class="main">
-            <!-- <h1>Welcome to GC Book Management Store</h1> -->
-            <!-- navbar -->
-            <div class="navbar flex">
-                <ul class="flex menu">
-                    <!-- <li><img src="" alt="Our Logo" class="logo"></li> -->
-                    <li><i class="fa-solid fa-gears logo"></i></li>
-                    <li>About</li>
-                    <li><a class="sign" href="/signup">Sign Up</a></li>
-                    <li><a class="sign" href="/signin">Sign In</a></li>
-                </ul>
-                <div class="flex">
-                    <div class="search-container">
-                        <input type="text" class="search-input" placeholder="Search...">
-                        <button type="submit" class="search-button">
-                            <i class="fa-solid fa-magnifying-glass icon"></i>
-                        </button>
-                      </div>                      
-                    <div class="profile-icon">
-                        <a href="/profile"><i class="fa-solid fa-user"></i></a>
-                    </div>
-                </div>
-            </div>
-            <!-- End of navbar -->
+  <head>
+    <title>Book Management Store</title>
+    <link rel="stylesheet" href="/style.css" />
 
-            <!-- Home page -->
-                <!-- <h2>User Home Page</h2> -->
-                <h1>Welcome to GC Book Management Store</h1>
-                <div class="books">
-                    <div class="book-container">
-                        <% for( let i of books ){ %>
-                            <div class="book">
-                                <div class="book-info">
-                                    <!-- <img src="<%= i.image %>" alt="<%= i.name %>"> -->
-                                    <p>Name of the Book: <%= i.name %></p>
-                                    <p>Author: <%= i.author %></p>
-                                    <p>Edition: <%= i.edition %></p>
-                                    <p>Price: <%= i.price %></p>
-                                </div>
-                                <form action="/add-to-cart" method="POST">
-                                    <input type="hidden" name="_id" value="<%= i._id %>">
-                                    <div class="button-container">
-                                        <button type="submit">Add to Cart</button>
-                                    </div>
-                                </form>
-                            </div>
-                        <% } %>
-                    </div>
-                </div>
-                
-                
-                
-                </div>
-            <!-- End of Home page -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-            <!-- Registration form -->
-            <!-- Login form -->
-            <!-- Profile Management -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="main">
+      <!-- <h1>Welcome to GC Book Management Store</h1> -->
+      <!-- navbar -->
+      <div class="navbar flex">
+        <ul class="flex menu">
+          <!-- <li><img src="" alt="Our Logo" class="logo"></li> -->
+          <li><i class="fa-solid fa-gears logo"></i></li>
+          <li>About</li>
+          <li><a class="sign" href="/bookStore/signup">Sign Up</a></li>
+          <li><a class="sign" href="/bookStore/signin">Sign In</a></li>
+        </ul>
+        <div class="flex">
+          <div class="search-container">
+            <form onsubmit="performSearch(event)">
+              <input
+                type="text"
+                class="search-input"
+                placeholder="Search..."
+                id="searchInput"
+              />
+              <button type="submit" class="search-button">
+                <i class="fa-solid fa-magnifying-glass icon"></i>
+              </button>
+            </form>
+          </div>
+
+          <div class="profile-icon">
+            <a href="/profile"><i class="fa-solid fa-user"></i></a>
+          </div>
         </div>
-        <script src="https://kit.fontawesome.com/90e294121a.js" crossorigin="anonymous"></script>
-    </body>
+      </div>
+
+      <!-- End of navbar -->
+
+      <!-- Home page -->
+      <!-- <h2>User Home Page</h2> -->
+      <h1>Welcome to GC Book Management Store</h1>
+      <div class="row row-cols-lg-3 offset-1">
+        <% for (let i of books) { %>
+        <div class="col mb-4">
+          <div class="card h-100" style="width: 18rem">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title mb-auto">
+                Name of the Book: <%= i.name %>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-body-secondary">
+                Author: <%= i.author %>
+              </h6>
+              <p class="card-text">Edition: <%= i.edition %></p>
+              <p class="card-link mt-auto">Price: <%= i.price %></p>
+            </div>
+            <div class="card-footer">
+              <form action="/add-to-cart" method="POST">
+                <input type="hidden" name="_id" value="<%= i._id %>" />
+                <button class="card-link" type="submit">
+                  <i class="fa-solid fa-cart-shopping"></i> Add to Cart
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+        <% } %>
+      </div>
+
+      <!-- End of Home page -->
+
+      <!-- Registration form -->
+      <!-- Login form -->
+      <!-- Profile Management -->
+    </div>
+    <script src="/js/script.js"></script>
+    <script
+      src="https://kit.fontawesome.com/90e294121a.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
