--- a/views/updateprofile.ejs
+++ b/views/updateprofile.ejs
@@ -1,17 +1,19 @@
 <html>
-    <head>
-        <title>Update Profile</title>
-        <link rel="stylesheet" href="../static/signin.css">
-    </head>
-    <body>
-        <!-- <h1>Update Profile</h1> -->
-        <form action="/submit" method="POST">
-            <input type="hidden" name="_method" value="PUT">
-            <input type="email" name="email" placeholder="Enter your Email"/>
-            <input type="password" name="password" placeholder="Enter your Password"/>
-            <button type="submit">Update</button>
-        </form>
-    </body>
+  <head>
+    <title>Update Profile</title>
+    <link rel="stylesheet" href="/signin.css" />
+  </head>
+  <body>
+    <!-- <h1>Update Profile</h1> -->
+    <form action="/submit" method="POST">
+      <input type="hidden" name="_method" value="PUT" />
+      <input type="email" name="email" placeholder="Enter your Email" />
+      <input
+        type="password"
+        name="password"
+        placeholder="Enter your Password"
+      />
+      <button type="submit">Update</button>
+    </form>
+  </body>
 </html>
-
-
