--- a/static/style.css
+++ b/static/style.css
@@ -4,16 +4,14 @@
     box-sizing: border-box;
 }
 
-/* html {
-    background-image: url("./assets/new.jpg") !important;
-    z-index: 1000 !important;
-} */
+html {
+    background-image: url("./assets/new.jpg");
+    z-index: -1;
+}
 
 body {
-    /* color: aquamarine; */
-    /* background-color: aquamarine !important; */
-    background-image: url("./assets/new.jpg") !important;
-} 
+    color: #ccc;
+}
 
 .main h1 {
     text-align: center;
@@ -23,7 +21,7 @@ body {
 }
 
 .navbar {
-    /* background-color: wheat;    */
+    background-color: wheat;   
     padding: 8px;
     cursor: pointer;
 }
@@ -73,11 +71,10 @@ ul li {
     width: 100%;
     padding: 7px;
     color: #fff;
-    background-color: rgb(73, 134, 113);
+    background-color: black;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
-    outline: none;
 }
   
 .search-button {
@@ -100,7 +97,7 @@ ul li {
     border: 1px solid black;
     border-radius: 50%;
     /* color: #fff; */
-    background-color: aquamarine;
+    background-color: rgb(215, 61, 61);
     /* background-color: auto; */
     /* background-color: rgb(18, 40, 211); */
 }
@@ -118,18 +115,44 @@ p {
     margin: 5px 0;
 }
 
-a {
-    text-decoration: none !important;
-    color: aquamarine !important;
+/* .books {
+    margin: 10px;
+    display: flex;
 }
 
-.card {
-    background-color: rgb(186, 199, 195) !important;
+.book {
+    margin: 5px;
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+    box-shadow: 4px 4px 8px whitesmoke;
+} */
+
+/* .books {
+    display: flex;
+    justify-content: center;
+}
+
+.book-container {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 900px; /* Adjust this value to your preference */
+    /* justify-content: space-between;
+    margin-top: 20px;
+} */
+
+.book {
+    width: 30%; /* Set the width of each book */
+    margin-bottom: 20px; /* Add some space between books */
+    /* border: 1px solid #ccc; Add a border for visual separation */
+    padding: 10px; /* Add some padding for better styling */
+    box-sizing: border-box; /* Ensure padding is included in the width */
+    /* box-shadow: 4px 4px 8px rgba(255, 228, 196, 0.801); */
     box-shadow: 4px 4px 8px rgb(57, 57, 122);
     transition: transform 0.5s ease;
 } 
 
-.card:hover {
+.book:hover {
     transform: translateY(-5px);
     /* background-color: aqua; */
 }
@@ -138,7 +161,31 @@ a {
     color: black;
 }
 
+.books {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    line-height: 1.4rem;
+}
+
+.book-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    max-width: 900px; /* Adjust this value to your preference */
+}
+
+
 img {
     max-width: 100%;
     height: auto;
+}
+
+.button-container {
+    display: flex;
+    /* justify-content: center; */
+}
+
+.button-container button:hover {
+    background-color: rgb(19, 19, 173);
 }
