--- a/static/addBooks.css
+++ b/static/addBooks.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url("./assets/addimg.png");
+    background-image: url("./assets/new.jpg");
    background-size: cover;
    background-repeat: no-repeat;
     margin: 0;
