--- a/static/signin.css
+++ b/static/signin.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("./assets/backimg.jpg");
+    background-image: url("./assets/new.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     font-family: Arial, sans-serif;
