--- a/static/adminHome.css
+++ b/static/adminHome.css
@@ -65,7 +65,7 @@ a:hover {
 }
 
 body {
-    background-image: url("./assets/backimg.jpg");
+    background-image: url("./assets/new.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     font-family: Arial, sans-serif;
