--- a/static/profile.css
+++ b/static/profile.css
@@ -2,25 +2,25 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url("./assets/profimg.jpg");
+    background-image: url("./assets/new.jpg");
     background-size: cover;
 }
 
-    h1 {
-    background-color: lightblue;
-    color: black;
-    padding: 20px;
-    margin: 0;
-    text-align: center;
-    }
+h1 {
+/* background-color: lightblue; */
+color: #80701d;
+padding: 20px;
+margin: 0;
+text-align: center;
+}
 
-    p {
-    font-size: 25px;
-    margin: 20px;
-    padding: 10px;
-    color: darkkhaki;
-    text-align: center;
-    }
+p {
+font-size: 25px;
+margin: 20px;
+padding: 10px;
+color: darkkhaki;
+text-align: center;
+}
 
 a {
     text-decoration: none;
