--- a/static/style.css
+++ b/static/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .navbar {
-    background-color: wheat;   
+    /* background-color: wheat;    */
     padding: 8px;
     cursor: pointer;
 }
@@ -33,14 +33,12 @@ body {
     gap: .8rem;
 }
 
-.main h1 {
+.main h2 {
     text-align: center;
-    color: aquamarine;
 }
 
 ul li {
     list-style: none;
-    color: aquamarine;
 }
 
 .menu {
@@ -49,8 +47,8 @@ ul li {
 
 .sign {
     padding: 5px 8px;
-    border: 2px solid rgb(142, 203, 183);
-    /* background-color: black; */
+    border: 2px solid blue;
+    background-color: black;
     text-decoration: none;
     color: white;
     border-radius: 5px;
@@ -58,7 +56,7 @@ ul li {
 }
 
 .sign:hover {
-    background-color: rgb(82, 167, 139);
+    background-color: rgb(18, 76, 223);
     border: 2px solid black;
 }
 
@@ -75,6 +73,7 @@ ul li {
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
+    outline: none;
 }
   
 .search-button {
@@ -114,32 +113,6 @@ button {
 p {
     margin: 5px 0;
 }
-
-/* .books {
-    margin: 10px;
-    display: flex;
-}
-
-.book {
-    margin: 5px;
-    padding: 5px;
-    border: 1px solid black;
-    border-radius: 5px;
-    box-shadow: 4px 4px 8px whitesmoke;
-} */
-
-/* .books {
-    display: flex;
-    justify-content: center;
-}
-
-.book-container {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 900px; /* Adjust this value to your preference */
-    /* justify-content: space-between;
-    margin-top: 20px;
-} */
 
 .book {
     width: 30%; /* Set the width of each book */
