--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,19 +1,18 @@
 <html>
   <head>
-    <title>Update Profile</title>
+    <title>Admin Log In</title>
     <link rel="stylesheet" href="../static/signin.css" />
   </head>
   <body>
-    <!-- <h1>Update Profile</h1> -->
-    <form action="/submit" method="POST">
-      <input type="hidden" name="_method" value="PUT" />
+    <!-- <h1>Admin Login</h1> -->
+    <form action="/verify-admin" method="post">
       <input type="email" name="email" placeholder="Enter your Email" />
       <input
         type="password"
         name="password"
         placeholder="Enter your Password"
       />
-      <button type="submit">Update</button>
+      <button>Login</button>
     </form>
   </body>
 </html>
