--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Sign In Form</title>
-    <link rel="stylesheet" href="/signin.css" />
+    <link rel="stylesheet" href="../static/signin.css" />
   </head>
   <body>
     <!-- <h1>Sign In Form</h1> -->
